--- a/package.json
+++ b/package.json
@@ -33,12 +33,14 @@
     "input": "^1.0.1",
     "lucide-react": "^0.396.0",
     "next": "14.2.4",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
     "react-use": "^17.5.0",
     "shadcn-ui": "^0.8.0",
     "sheet": "^0.2.0",
+    "sonner": "^1.5.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8",
