--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
+    "react-select": "^5.8.0",
     "react-use": "^17.5.0",
     "shadcn-ui": "^0.8.0",
     "sheet": "^0.2.0",
